k8s/overlay/with-ingress-tls-cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: default
    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: dyniku
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: dyniku
                port:
                  number: 80
  tls:
    - hosts:
        - localhost
      secretName: dyniku-tls
